Fixed dark mode image inversion problem

--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -15,8 +15,12 @@
 
 @media (prefers-color-scheme: dark) {
     html {
-        filter: invert(0.9) hue-rotate(180deg) !important;
-        -webkit-filter: invert(0.9) hue-rotate(180deg) !important;
+        filter: invert(0.9) hue-rotate(180deg);
+        -webkit-filter: invert(0.9) hue-rotate(180deg);
+    }
+    img {
+        filter: invert(1) hue-rotate(180deg) !important;
+        -webkit-filter: invert(1) hue-rotate(180deg) !important;
     }
 }
 
@@ -135,6 +139,7 @@ hr {
 }
 
 .navbar {
+    z-index: 10;
     position: sticky;
     background: var(--BG-COLOR);
     box-shadow: 0px 0px 8px rgba(0,0,0,0.125);
